<resources>
    <string name="app_name">ECognitaClient</string>
    <string name="signin_name">Quiz eLearning Game - eCognita</string>
    <string name="action_settings">Settings</string>
    <string name="login_tab_label">Log In</string>
    <string name="signup_tab_label">Sign Up</string>
    <string name="login_button_label">Log In</string>
    <string name="login_email_label">Email:</string>
    <string name="login_password_label">Password:</string>
    <string name="mycourses_activity_label">My Courses</string>
    <string name="full_name"><![CDATA[Name & Surname:]]></string>
    <string name="matr_number">Matriculation Number:</string>
    <string name="create_password">Create password:</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="logout_button_label">Log out</string>
    <string name="failed_to_login_message">Could not connect with these credentials, please, check your email and password.</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="failed_to_signup_message">Failed to sign up. Please, make sure that such a user doesn\'t already exist.</string>
    <string name="logout_menu_label">Log out</string>
    <string name="new_courses_tab_label">NEW</string>
    <string name="all_courses_tab_label">ALL</string>
    <string name="subscribe_for_notifications">Subscribe for push notifications</string>
    <string name="unsubscribe_for_notifications">Unsubscribe</string>
    <string name="failed_to_subscribe_message">Failed to subscribe</string>
    <string name="start_now_quiz">START NOW</string>
    <string name="ok_question">OK</string>
    <string name="skip_question">SKIP</string>
    <string name="see_solution_button_label">See Solution</string>
    <string name="refresh_menu_label">Refresh</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home (My Courses)</item>
        <item >Search Courses</item>
        <item >Statistics</item>
        <item >Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_slide_menu_home</item>
        <item>@drawable/ic_slide_menu_search</item>
        <item>@drawable/ic_slide_menu_statistics</item>
        <item>@drawable/ic_slide_menu_settings</item>
    </array>
</resources>
